Refactor:	The vrjuggler-config script no longer contains paths to 		C++ dependencies.  Instead, the dependency path(s) must 		be provided by the caller, the environment variable 		$VJ_DEPS_DIR must be set, or the dependencies must be 		installed in the same tree as VR Juggler.
This fixes a long-standing problem of distributing copies of VR Juggler
with paths to dependencies that pointed to installations on the machine
where VR Juggler was compiled.  It also makes it possible for us to bundle
up all the redistributable C++ dependencies for easy download by users and
developers.


git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@14738 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/juggler/modules/vrjuggler/vrjuggler-config.in
+++ b/juggler/modules/vrjuggler/vrjuggler-config.in
@@ -91,6 +91,13 @@ $Win32 = (defined($ENV{'OS'}) && $ENV{'OS'} =~ /^win/i);
 
 my $base_dir = '';
 
+# Set the location of the collection of dependencies.  If $VJ_DEPS_DIR is
+# not defined, then $deps_dir will be an empty string.  If the dependencies
+# are installed in $VJ_BASE_DIR, then the user gets the right compiler and
+# linker path options for free.  Otherwise, it is up to the user to provide
+# those paths.
+my $deps_dir = "$ENV{'VJ_DEPS_DIR'}" if defined($ENV{'VJ_DEPS_DIR'});
+
 # Get the directory where this script is located.
 if ( defined($ENV{'VJ_BASE_DIR'}) )
 {
@@ -289,6 +296,7 @@ sub make_CXXFLAGS ($;$)
 
    my $cxxflags = qq(@vrj_cxxflags@ $dep_cxxflags $vrj_extra_cxxflags ) .
                   qq(-I@includedir@ $vrj_extra_includes);
+   $cxxflags   .= " -I$deps_dir/include" if $deps_dir;
 
    # Strip out extra whitespace.
    $cxxflags =~ s/\s{2,}/ /g;
@@ -432,6 +440,7 @@ sub make_EXTRA_LDFLAGS ($;$$$)
 
    my $extra_ldflags = ($use_linker ? qq(@vrj_extra_ldflags_linker@)
                                     : qq(@vrj_extra_ldflags_compiler@));
+   $extra_ldflags = "-L$deps_dir/lib $extra_ldflags" if $deps_dir;
 
    my $full_extra_ldflags = "$extra_ldflags $extra_libs $dep_extra_libs";
 
