C++ binary dependencies are now installed into the ABI-specific lib directory.  This is only relevant on IRIX at the moment, so no other platforms should be affected.  This fixes the IRIX build after changes I made earlier today broke library linking.
git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@14740 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/juggler/modules/jackal/jccl-config.in
+++ b/juggler/modules/jackal/jccl-config.in
@@ -372,7 +372,7 @@ sub make_EXTRA_LDFLAGS ($;$$)
    }
 
    my $extra_ldflags = qq(@jccl_extra_ldflags@);
-   $extra_ldflags = "-L$deps_dir/lib $extra_ldflags" if $deps_dir;
+   $extra_ldflags = "-L$deps_dir/lib$LIBBITSUF $extra_ldflags" if $deps_dir;
 
    my $full_extra_ldflags = qq($extra_ldflags @jccl_extra_libs@ ) .
                             "$dep_libs $dep_extra_libs";
