Added a project file for building the Java pieces of the TweekGadget driver.  This addition makes the Visual Studio-based build complete in terms of being able to compile all the C++, Java, and IDL code that the GNU make build handles.
git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@14748 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/juggler/vc7/Gadgeteer/Tweek/Tweek.vcproj
+++ b/juggler/vc7/Gadgeteer/Tweek/Tweek.vcproj
@@ -2,7 +2,7 @@
 <VisualStudioProject
 	ProjectType="Visual C++"
 	Version="7.00"
-	Name="Driver - TweekGadget"
+	Name="Driver - TweekGadget (C++)"
 	ProjectGUID="{2BB1C6DC-A6DB-42A3-A91A-DBD8BA7A843B}"
 	Keyword="Win32Proj">
 	<Platforms>
